Changed slider transition to use z-index only (Firefox was causing a reload when size changed).  Also fixed a bug where in Chrome flash content was appearing on top of the alert image.

--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,5 @@
 iframe { width: 100%; height: 100%; }
-div.slide { position: absolute; top: 0; left: 0; height: 100%; width: 100%; }
+div.slide { position: absolute; top: 0; left: 0; height: 100%; width: 100%; display: none; }
 #sliderContainer { position: relative; top: 0; left: 0; height: 50%; width: 100%; margin-bottom: 5px; }
 #sliderFrame { overflow: hidden; height: 100%; width: 100%; }
 #alarmAudioDiv { display: none; }
